--- a/index.html
+++ b/index.html
@@ -236,6 +236,16 @@
         />
         <span id="email_validation" class="error mb-4"></span>
 
+        <!-- Número de teléfono -->
+        <input 
+          name="telefono"
+          type="tel"
+          id="telForm"
+          class="form-control mt-4"
+          placeholder="Número de teléfono"
+        />
+        <span id="phone_validation" class="error mb-4"></span>
+
         <!-- Message -->
         <div class="form-group">
           <textarea
@@ -281,6 +291,8 @@
             <i class="fab fa-whatsapp pr-1"></i>+3794 945292
           </button>
         </div>
+
+        
 
         <div
           class="col-12 d-flex justify-content-center container-fluid mx-auto"
